fixed alignments, colors, and classes

--- a/css/global.css
+++ b/css/global.css
@@ -32,25 +32,6 @@ body {
   
     /* Gaps */
     --gap-9xs: 4px;
-  
-    /* Paddings */
-    --padding-12xs: 1px;
-    --padding-smi: 13px;
-    --padding-6xs: 7px;
-  
-    /* border radiuses */
-    --br-8xs: 5px;
-    --br-5xs: 8px;
-    --br-7xs: 6px;
   }
 
-  @keyframes wave-animation {
-    0% { transform: rotate( 0.0deg) }
-   10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
-   20% { transform: rotate(-8.0deg) }
-   30% { transform: rotate(14.0deg) }
-   40% { transform: rotate(-4.0deg) }
-   50% { transform: rotate(10.0deg) }
-   60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
-  100% { transform: rotate( 0.0deg) }
-}
+
